# llama_impact_code4any1

./: .env  .gitignore  README.md  You are an AI assistant designed to crea.md  app.py  curriculum.txt  flow.py  help_flow.html  onboarding_flow.html  pyproject.toml  question_flow.html  requirements.txt  user_messages.txt  user_persona.txt
configs/: agents.yaml  tasks.yaml
configs/basic_config/: agents.yaml  tasks.yaml
llama_impact_code4any1/crews/: base_config.py  curriculum.py  explanation.py  help.py  onboarding.py  questions.py
notebooks/: 1-FirstExperiment.ipynb  2-RouteCrews.ipynb  crewai_flow.html  flow_1.py  state.txt  user_messages.txt  user_persona.txt
notebooks/.ipynb_checkpoints/: 1-FirstExperiment-checkpoint.ipynb
src/: agents.py  base_crewai_config.py  curriculum.py  db.py  final_response.py  flows.py  llama_guard.py  onboarding_chat.py  tasks.py  tool_router.py
src/crews/: explanation.py  help.py  onboarding.py  questions.py
src/tools/: do_nothing_tool.py  evaluate_tool.py  evaluation_tool.py  explanation_tool.py  question_tool.py  topic_tool.py  update_state_tool.py
